--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,40 @@
-node_modules
-dist
+# Dependências
+node_modules/
+.pnp
+.pnp.js
+
+# Produção
+dist/
+dist-ssr/
+*.local
+
+# Arquivos de ambiente
+.env
+.env.*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Sistema
 .DS_Store
+Thumbs.db
+
+# Build
+.vite/
+*.tsbuildinfo
+
+# Arquivos específicos do projeto
 server/public
 vite.config.ts.*
 *.tar.gz
